# SOCRA-Testing

./: .gitignore  README.md  config.py  main.py  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
app/: database.py
app/crud/: database.py
app/models/: db_entry.py  schemas.py
app/utils/: cleaner.py  scraping.py  style.py  validation.py
data/: SOCRA_2_67_Full.html  SOCRA_Full.html
ui/: begin_test.py  start.py  test_options.py
