[project]
name = "socra-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "curl-cffi>=0.13.0",
    "html5lib>=1.1",
    "pydantic>=2.11.7",
    "ruff>=0.12.8",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.0",
]
